--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
+    "mongoose": "^6.3.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
