--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
     "mongoose": "^6.3.2",
+    "mongoose-slug-generator": "^1.0.4",
     "path": "^0.12.7"
   },
   "devDependencies": {
